--- a/.github/workflows/build-update.yaml
+++ b/.github/workflows/build-update.yaml
@@ -17,7 +17,7 @@ jobs:
           buildx-version: latest
       - name: login to docker hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-      - name: build the image
+      - name: build the docker image
         run: |
           BDATE=$(date +%d-%m-%Y) && docker buildx build --push \
           --tag avpnusr/sabnzbd-dev:latest --tag avpnusr/sabnzbd-dev:$BDATE \
