--- a/.github/workflows/build-update.yaml
+++ b/.github/workflows/build-update.yaml
@@ -10,11 +10,16 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v2
+      - name: setup qemu
+        id: qemu
+        uses: docker/setup-qemu-action@v1
+        with:
+         platforms: all
       - name: install buildx
         id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v3
+        uses: docker/setup-buildx-action@v1
         with:
-          buildx-version: latest
+         version: latest
       - name: login to docker hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: build the docker image
