--- a/.github/workflows/build-update.yaml
+++ b/.github/workflows/build-update.yaml
@@ -21,7 +21,7 @@ jobs:
         with:
          version: latest
       - name: login to docker hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        run: echo '${{ secrets.DOCKER_PASSWORD }}' | docker login -u '${{ secrets.DOCKER_USERNAME }}' --password-stdin
       - name: build the docker image
         run: |
           BDATE=$(date +%d-%m-%Y) && docker buildx build --push \
